fixed heading alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -52,7 +52,7 @@ body {
 	margin: 2% 0;
 	@media screen and (max-width: $break-xsmall){
 		text-align: center;
-
+		margin: 2% 20px 0 0;
 	}
 }
 
